# mcp-devtools

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
k8s/llm-sandbox/: README.md  configmap.yaml  deploy.sh  fuse-device-plugin.yaml  namespace.yaml  service.yaml  statefulset.yaml
k8s/searxng/: README.md  configmap.yaml  deploy.sh  deployment.yaml  service.yaml
src/devtools/: app.py  guardrails.py  server.py
src/devtools/tools/: bash.py  edit.py  glob_tool.py  grep.py  models.py  read.py  todo_write.py  web_fetch.py  web_search.py  write.py
tests/: conftest.py  test_app.py  test_bash.py  test_edit.py  test_glob.py  test_grep.py  test_guardrails.py  test_read.py  test_todo_write.py  test_web_fetch.py  test_web_search.py  test_write.py
