[project]
name = "mcp-devtools"
version = "0.1.0"
description = "MCP DevTools server providing developer tools"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.6",
    "mcp>=1.12.2",
    "httpx>=0.28.0",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
tavily = [
    "tavily-python>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
